--- a/k8s/pingdirectory.yaml
+++ b/k8s/pingdirectory.yaml
@@ -16,7 +16,7 @@
 apiVersion: v1
 data:
   K8S_STATEFUL_SET_NAME: pingdirectory
-  K8S_STATEFUL_SET_SERVICE_NAME: pingdirectory
+  K8S_STATEFUL_SET_SERVICE_NAME: pingdirectory-cluster
   ORCHESTRATION_TYPE: KUBERNETES
   SERVER_PROFILE_URL: https://github.com/Technical-Enablement-PingIdentity/BXFinance-ServerProfiles
   SERVER_PROFILE_PATH: profiles/pingdirectory
@@ -54,6 +54,24 @@ spec:
     role: pingdirectory
 
 ---
+
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    role: pingdirectory
+  name: pingdirectory-cluster
+  annotations:
+    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
+spec:
+  publishNotReadyAddresses: true
+  clusterIP: None
+  ports:
+  - name: ldaps
+    port: 636
+  selector:
+    role: pingdirectory
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -65,7 +83,7 @@ spec:
   selector:
     matchLabels:
       role: pingdirectory
-  serviceName: pingdirectory
+  serviceName: pingdirectory-cluster
   template:
     metadata:
       labels:
