--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -15,6 +15,6 @@ generatorOptions:
   disableNameSuffixHash: true
 
 configMapGenerator:
-- name: ${REF}-global-env-vars
+- name: global-env-vars
   envs:
     - shared-vars
