--- a/k8s/pingaccess.yaml
+++ b/k8s/pingaccess.yaml
@@ -47,7 +47,7 @@ spec:
       containers:
       - envFrom:
         - configMapRef:
-            name: ${REF}-global-env-vars
+            name: global-env-vars
         # - secretRef:
         #     name: server-profile-url
         #     optional: false
@@ -84,7 +84,7 @@ spec:
       initContainers:
       - name: init
         image: curlimages/curl:latest
-        command: ['sh', '-c', 'until curl --connect-timeout 1 --silent -k https://pingfederate:9999/pingfederate/app ; do echo waiting for admin ; sleep 2 ; done']
+        command: ['sh', '-c', 'until curl --connect-timeout 1 --silent -k https://${REF_PREFIX}pingfederate:9999/pingfederate/app ; do echo waiting for admin ; sleep 2 ; done']
 
 ---
 apiVersion: extensions/v1beta1
