--- a/k8s/pingdatagovernance.yaml
+++ b/k8s/pingdatagovernance.yaml
@@ -1,6 +1,9 @@
 apiVersion: v1
 data:
   SERVER_PROFILE_PATH: profiles/pingdatagovernance
+  ROOT_USER_PASSWORD_FILE: /opt/staging/pwd
+  ADMIN_USER_PASSWORD_FILE: /opt/staging/pwd
+  ENCRYPTION_PASSWORD_FILE: /opt/staging/pwd
 kind: ConfigMap
 metadata:
   labels:
@@ -44,7 +47,7 @@ spec:
       containers:
       - envFrom:
         - configMapRef:
-            name: ${REF}-global-env-vars
+            name: global-env-vars
         # - secretRef:
         #     name: server-profile-url
         #     optional: false
@@ -81,4 +84,4 @@ spec:
       initContainers:
       - name: init
         image: curlimages/curl:latest
-        command: ['sh', '-c', 'until curl --connect-timeout 1 --silent -k https://pingdirectory:443/directory/v1 ; do echo waiting for pingdirectory ; sleep 3 ; done']
+        command: ['sh', '-c', 'until curl --connect-timeout 1 --silent -k https://${REF_PREFIX}pingdirectory:443/directory/v1 ; do echo waiting for pingdirectory ; sleep 3 ; done']
