--- a/k8s/pingdatagovernancepap.yaml
+++ b/k8s/pingdatagovernancepap.yaml
@@ -15,7 +15,7 @@ kind: Service
 metadata:
   labels:
     role: pingdatagovernancepap
-  name: pingdatapap
+  name: pingdatagovernancepap
 spec:
   ports:
   - name: https
@@ -43,7 +43,7 @@ spec:
       containers:
       - envFrom:
         - configMapRef:
-            name: ${REF}-global-env-vars
+            name: global-env-vars
         # - secretRef:
         #     name: server-profile-url
         #     optional: false
