--- a/k8s/pingdatagovernance.yaml
+++ b/k8s/pingdatagovernance.yaml
@@ -84,4 +84,4 @@ spec:
       initContainers:
       - name: init
         image: curlimages/curl:latest
-        command: ['sh', '-c', 'until curl --connect-timeout 1 --silent -k https://${REF_PREFIX}pingdirectory:443/directory/v1 ; do echo waiting for pingdirectory ; sleep 3 ; done']
+        command: ['sh', '-c', 'until curl --connect-timeout 1 --silent -k https://${REF_PREFIX}pingdirectory:443/directory/v1 ; do echo waiting for ${REF_PREFIX}pingdirectory:443 ; sleep 3 ; done']
