--- a/k8s/pingdirectory.yaml
+++ b/k8s/pingdirectory.yaml
@@ -15,8 +15,8 @@
 # ---
 apiVersion: v1
 data:
-  K8S_STATEFUL_SET_NAME: ${REF_PREFIX}pingdirectory
-  K8S_STATEFUL_SET_SERVICE_NAME: ${REF_PREFIX}pingdirectory-cluster
+  K8S_STATEFUL_SET_NAME: pingdirectory
+  K8S_STATEFUL_SET_SERVICE_NAME: pingdirectory-cluster
   ORCHESTRATION_TYPE: KUBERNETES
   SERVER_PROFILE_URL: https://github.com/Technical-Enablement-PingIdentity/BXFinance-ServerProfiles
   SERVER_PROFILE_PATH: profiles/pingdirectory
