use github secrets

--- a/k8s-feature/kustomization.yaml
+++ b/k8s-feature/kustomization.yaml
@@ -5,6 +5,8 @@ resources:
 - ../k8s
 - admin-ingress.yaml
 - namespace.yaml
+- devops-secret.yaml
+- gcr-pull-secret.yaml
 #- secret.yaml
 
 generatorOptions:
