--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -65,13 +65,13 @@ jobs:
     #     SLACK_WEBHOOK_ID: ${{ secrets.SLACK_WEBHOOK_ID }}
       # eval sha of profile dirs and deploy chart
     - name: Deploy Environment
-      env:
-        P1_ADMIN_ENV_ID: ${{ secrets.P1_ADMIN_ENV_ID}}
-        PF_ADMIN_WORKER_ID: ${{ secrets.PF_ADMIN_WORKER_ID}}
-        PF_ADMIN_WORKER_SECRET: ${{ secrets.PF_ADMIN_WORKER_SECRET}}
       run: |
         export REF=$(echo $GITHUB_REF | sed -e "s#refs/heads/##g")
         sh ci_tools/env_deploy.sh
+      env:
+        PING_IDENTITY_DEVOPS_USER_BASE64: ${{ secrets.PING_IDENTITY_DEVOPS_USER_BASE64 }}
+        PING_IDENTITY_DEVOPS_KEY_BASE64: ${{ secrets.PING_IDENTITY_DEVOPS_KEY_BASE64 }}
+        GCR_CONFIG_JSON_BASE64: ${{ secrets.GCR_CONFIG_JSON_BASE64 }}
     # - name: Integration Test
     #   run: ci_tools/run_postman.sh iac/integrationtest.yaml
     # - name: Environment Info
