--- a/k8s-feature/devops-secret.yaml
+++ b/k8s-feature/devops-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: gcr-pull-secret
+  name: devops-secret
 type: Opaque
 data:
   PING_IDENTITY_ACCEPT_EULA: "WUVT"
