--- a/k8s-feature/gcr-pull-secret.yaml
+++ b/k8s-feature/gcr-pull-secret.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: Secret
+type: kubernetes.io/dockerconfigjson
 metadata:
   name: gcr-pull-secret
-type: kubernetes.io/dockerconfigjson
 data:
-  .dockerconfigjson: |
-    "${GCR_CONFIG_JSON_BASE64}"
+  .dockerconfigjson: "${GCR_CONFIG_JSON_BASE64}"
