--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -72,6 +72,10 @@ jobs:
         PING_IDENTITY_DEVOPS_USER_BASE64: ${{ secrets.PING_IDENTITY_DEVOPS_USER_BASE64 }}
         PING_IDENTITY_DEVOPS_KEY_BASE64: ${{ secrets.PING_IDENTITY_DEVOPS_KEY_BASE64 }}
         GCR_CONFIG_JSON_BASE64: ${{ secrets.GCR_CONFIG_JSON_BASE64 }}
+        PA_LIC_BASE64: ${{ secrets.PA_LIC_BASE64 }}
+        PF_LIC_BASE64: ${{ secrets.PF_LIC_BASE64 }}
+        PD_LIC_BASE64: ${{ secrets.PD_LIC_BASE64 }}
+        PDG_LIC_BASE64: ${{ secrets.PDG_LIC_BASE64 }}
     # - name: Integration Test
     #   run: ci_tools/run_postman.sh iac/integrationtest.yaml
     # - name: Environment Info
