--- a/k8s-feature/licenses.yaml
+++ b/k8s-feature/licenses.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  pingaccess.lic: ${PA_LIC_BASE64}
+  pingaccess.lic: "${PA_LIC_BASE64}"
 kind: Secret
 metadata:
   labels:
@@ -12,7 +12,7 @@ type: Opaque
 
 apiVersion: v1
 data:
-  pingfederate.lic: ${PF_LIC_BASE64}
+  pingfederate.lic: "${PF_LIC_BASE64}"
 kind: Secret
 metadata:
   labels:
@@ -24,7 +24,7 @@ type: Opaque
 
 apiVersion: v1
 data:
-  PingDirectory.lic: ${PD_LIC_BASE64}
+  PingDirectory.lic: "${PD_LIC_BASE64}"
 kind: Secret
 metadata:
   labels:
@@ -36,7 +36,7 @@ type: Opaque
 
 apiVersion: v1
 data:
-  PingDataGovernance.lic: ${PDG_LIC_BASE64}
+  PingDataGovernance.lic: "${PDG_LIC_BASE64}"
 kind: Secret
 metadata:
   labels:
