for new pf path

--- a/k8s-feature/admin-ingress.yaml
+++ b/k8s-feature/admin-ingress.yaml
@@ -15,7 +15,7 @@ spec:
       - backend:
           serviceName: pingfederate
           servicePort: 9999
-        path: /pingfederate
+        path: /
       - backend:
           serviceName: pingfederate
           servicePort: 9999
