--- a/k8s/pingfederate.yaml
+++ b/k8s/pingfederate.yaml
@@ -62,9 +62,9 @@ spec:
           initialDelaySeconds: 100
           periodSeconds: 1
         name: pingfederate
-        # env:
-        # - name: PF_PROFILE_SHA
-        #   value: ${pingfederateSha}
+        env:
+        - name: PF_PROFILE_SHA
+          value: ${pingfederateSha}
         ports:
         - containerPort: 9999
         - containerPort: 9031
