--- a/.github/workflows/feature_cleanup.yml
+++ b/.github/workflows/feature_cleanup.yml
@@ -53,4 +53,4 @@ jobs:
     - name: Cleanup Feature K8S Env
       run: |
         export REF=$(echo "${{ github.event.ref }}" | sed -e "s#refs/heads/##g")
-        sh ci_tools/clean_prune.sh
+        sh ci_tools/env_prune.sh
