--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -11,7 +11,7 @@ on:
     #   - development
 
 
-name: Deploy Feature Env
+name: DeployEnv
 
 jobs:
   deploy:
@@ -75,6 +75,14 @@ jobs:
         PF_LIC_BASE64: ${{ secrets.PF_LIC_BASE64 }}
         PD_LIC_BASE64: ${{ secrets.PD_LIC_BASE64 }}
         PDG_LIC_BASE64: ${{ secrets.PDG_LIC_BASE64 }}
+    - name: LetsEncrypt Flow
+      run: |
+        export REF=$(echo $GITHUB_REF | sed -e "s#refs/heads/##g")
+        CTIME=$(kubectl get pod -l role=pingaccess '-o=jsonpath={.items[0].metadata.creationTimestamp}')
+        PA_AGE="$(($(date '+%s') - $(date -d $CTIME '+%s')))"
+        if test $PA_AGE -lt 360; then 
+          sh ci_tools/run_postman.sh k8s/postman.yaml letsencrypt-pa adab3b2375d6a394de8c 100
+        fi
     # - name: Integration Test
     #   run: ci_tools/run_postman.sh iac/integrationtest.yaml
     # - name: Environment Info
