--- a/.github/workflows/feature_cleanup.yml
+++ b/.github/workflows/feature_cleanup.yml
@@ -3,12 +3,11 @@ on:
   # but only for the main branch
   delete:
     branches-ignore:
-      - qa
-      - staging
+      # - qa
       - main
       - master
 
-name: Delete Env
+name: DeleteEnv
 
 jobs:
   deploy:
@@ -53,4 +52,4 @@ jobs:
     - name: Cleanup Feature K8S Env
       run: |
         export REF=$(echo "${{ github.event.ref }}" | sed -e "s#refs/heads/##g")
-        sh ci_tools/clean_prune.sh
+        sh ci_tools/prune_env.sh
