Upgrading to 10.3 edge

--- a/k8s/pingfederate.yaml
+++ b/k8s/pingfederate.yaml
@@ -51,7 +51,7 @@ spec:
             optional: true
         - configMapRef:
             name: pingfederate-environment-variables
-        image: pingidentity/pingfederate:2012-10.2.0
+        image: pingidentity/pingfederate:10.3.0-edge
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 1
