--- a/k8s/pingfederate.yaml
+++ b/k8s/pingfederate.yaml
@@ -51,7 +51,7 @@ spec:
             optional: true
         - configMapRef:
             name: pingfederate-environment-variables
-        image: pingidentity/pingfederate:10.3.0-edge
+        image: pingidentity/pingfederate:2106-10.3.0
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 1
