Bunch of updates
Updated message prop for Required Email Verification
Set email verification to required for testing
Disabled PID SDK Provisioner
Upgraded adapters

--- a/profiles/pingfederate/instance/server/default/conf/language-packs/pingfederate-messages.properties
+++ b/profiles/pingfederate/instance/server/default/conf/language-packs/pingfederate-messages.properties
@@ -44,6 +44,7 @@ html.form.login.template.passwordTitle=Password
 html.form.login.template.rememberUsernameTitle=Remember my username
 html.form.login.template.myDeviceTitle=This is my device
 html.form.login.template.signInButtonTitle=Sign On
+html.form.login.template.signingOn=Signing on...
 html.form.login.template.cancelButtonTitle=Cancel
 html.form.login.template.loginFailureMessage=Invalid username or password. Please try again.
 html.form.login.template.changePassword=Change Password?
@@ -83,6 +84,10 @@ html.form.change.password.template.defaultPasswordChangeError=There was an error
 html.form.change.password.template.accountLockedError=Your account is locked. Please contact BXFinance Customer Care Center for further assistance.
 html.form.change.password.template.captchaError=A CAPTCHA error has occurred. Please contact BXFinance Customer Care Center for further assistance.
 html.form.change.password.template.passwordRequirementsTitle=See Password Requirements
+html.form.change.password.template.passwordChangeFailed=The system was unable to change the password. Please contact a site administrator for assistance.
+html.form.change.password.template.policyNewPassword=Please enter your new password.
+html.form.change.password.template.policyCurrentPassword=Please enter your current password and authenticate with additional factors before providing a new password.
+html.form.change.password.template.usernameChangedAfterFirstFactor=The current username does not match with the one that initiated the password change.
 
 
 # html.form.message.template.html
@@ -93,6 +98,11 @@ html.form.message.template.passwordChangedCancelHeaderMessage=You have cancelled
 html.form.message.template.passwordChangedLinkText=Continue
 html.form.message.template.pwmHeaderMessage=To change your password, please access the password management system.
 html.form.message.template.pwmLinkText=Continue to password management system
+html.form.message.template.unknownError=An unknown error has occurred. Please contact a site administrator for assistance.
+html.form.message.template.authFailed=Authentication failed.
+html.form.message.template.invalidState=This page has expired. Please restart the change password process.
+html.form.message.template.changePasswordErrorTitle=An error occurred while authenticating the user before changing the password.
+html.form.message.template.passwordChangeFailed=The system was unable to change the password. Please contact a site administrator for assistance.
 
 # html.form.password.expiring.notification.template
 html.form.password.expiring.notification.template.title=Password Expiring
@@ -440,6 +450,18 @@ local.identity.email.verification.error.unknownError=An unknown error has occurr
 local.identity.email.verification.error.authFailed=Authentication failed.
 local.identity.email.verification.error.emailVerificationFailed=The system was unable to verify your email. Please contact a site administrator for assistance.
 
+# local.identity.email.verification.required.html
+local.identity.email.verification.required.title=Email Verification
+local.identity.email.verification.required.description.1=A verification email was sent to 
+local.identity.email.verification.required.description.2={0}.
+local.identity.email.verification.required.description.3=Please check your email and follow the directions to verify your account.
+local.identity.email.verification.required.resend.description=Didn't receive the email?
+local.identity.email.verification.required.resendLinkTitle=Resend
+local.identity.email.verification.required.continueButtonTitle=Continue
+local.identity.email.verification.required.profileManagementLinkTitle=Manage Profile
+local.identity.email.verification.required.cancelLinkTitle=Cancel
+local.identity.email.verification.required.resentNotification=A verification email has been sent to {0}. Please check your email.
+local.identity.email.verification.required.continueNotification=Please check your email and come back here to continue.
 local.identity.required.checkbox.not.selected={0} is required to continue.
 local.identity.nothing.selected.for.checkboxgroup=At least one selection is required for {0}.
 local.identity.field.required={0} is required.
@@ -559,6 +581,16 @@ password.policy.requirement.unique.characters=Must contain {0} unique characters
 #Authn API Explorer
 pf-ws.authn.api.explorer.template.title=Authentication API Explorer
 
+#P14C IK messages, these messages have been renamed in the latest version of PingOne IK and to make a smoother upgrade, we are keeping these around until we drop support to P14C IK v1.2.1
+p14c.authn.srvr.msg.user.not.found=We didn't recognize the username or password you entered. Please try again.
+p14c.authn.srvr.msg.invalid.credentials=We didn't recognize the username or password you entered. Please try again.
+p14c.authn.srvr.msg.no.password.set=We didn't recognize the username or password you entered. Please try again.
+p14c.authn.srvr.msg.account.not.usable=Your account is disabled. Please contact your system administrator.
+p14c.authn.srvr.msg.user.must.change.password=Your password must be reset before you can log on. Please change your password and try again or contact your system administrator.
+p14c.authn.srvr.msg.user.password.expired=Your password is expired and must be changed.
+p14c.authn.srvr.msg.password.policy.violated=The password you entered does not meet policy restrictions. Please try again.
+p14c.authn.srvr.msg.password.locked.out=Your account is locked. Please contact your system administrator.
+p14c.authn.srvr.msg.password.reset.too.young=The password cannot be changed because it has not been long enough since the last password change.
 pingid.oa.title=PingID Offline Authentication
 pingid.oa.heading=Manual Authentication
 pingid.oa.device.intro=You need to manually authenticate at this time. Open the PingID app on your mobile device, and click 'Next' to follow a couple easy steps to authenticate.
@@ -581,4 +613,14 @@ pingid.oa.mobile.use.qr=Use QR code
 pingid.oa.mobile.use.application=Return to activation
 pingid.oa.mobile.application.authenticate=Authenticate
 pingid.oa.mobile.qr.info=Tap "Authenticate" to open PingID and get your authentication code. Then return to this browser to enter the code and sign on.
+
+pingone.authn.srvr.msg.user.not.found=We didn't recognize the username or password you entered. Please try again.
+pingone.authn.srvr.msg.invalid.credentials=We didn't recognize the username or password you entered. Please try again.
+pingone.authn.srvr.msg.no.password.set=We didn't recognize the username or password you entered. Please try again.
+pingone.authn.srvr.msg.account.not.usable=Your account is disabled. Please contact your system administrator.
+pingone.authn.srvr.msg.user.must.change.password=Your password must be reset before you can log on. Please change your password and try again or contact your system administrator.
+pingone.authn.srvr.msg.user.password.expired=Your password is expired and must be changed.
+pingone.authn.srvr.msg.password.policy.violated=The password you entered does not meet policy restrictions. Please try again.
+pingone.authn.srvr.msg.password.locked.out=Your account is locked. Please contact your system administrator.
+pingone.authn.srvr.msg.password.reset.too.young=The password cannot be changed because it has not been long enough since the last password change.
 
