--- a/k8s/pingdataconsole.yaml
+++ b/k8s/pingdataconsole.yaml
@@ -29,7 +29,7 @@ spec:
       name: pingdataconsole
     spec:
       containers:
-      - image: pingidentity/pingdataconsole:edge
+      - image: pingidentity/pingdataconsole:2012-8.2.0.0
         name: pingdataconsole
         ports:
         - containerPort: 8443
