--- a/k8s/pingaccess.yaml
+++ b/k8s/pingaccess.yaml
@@ -56,7 +56,7 @@ spec:
             optional: true
         - configMapRef:
             name: pingaccess-environment-variables
-        image: pingidentity/pingaccess:2106-6.3.0
+        image: pingidentity/pingaccess:2106-latest
         name: pingaccess
         env:
         - name: PA_PROFILE_SHA
